[2단계 - 블랙잭 베팅] 짱구(박준혁) 미션 제출합니다. (#877)
* 🔴red: Money 단위테스트 작성 (입력이 공백이면 예외를 발생시킨다)

* 🟢green: 입력이 공백이면 예외를 발생시키는 로직 구현

* refactor: 메서드 분리

* 🔴red: Money 단위테스트 작성 (입력이 null이면 예외를 발생시킨다)

* 🟢green: 입력이 null이면 예외를 발생시키는 로직 구현

* refactor: 메서드 분리

* 🔴red: Money 단위테스트 작성 (입력이 정수 형식이 아니면 예외를 발생시킨다)

* 🟢green: 입력이 정수 형식이 아니면 예외를 발생시키는 로직 구현

* refactor: 메서드 분리

* 🔴red: Money 단위테스트 작성 (입력이 0보다 작거나 같으면 예외를 발생시킨다)

* 🟢green: 입력이 0보다 작거나 같으면 예외를 발생시키는 로직 구현

* refactor: 메서드 분리

* 🔴red: Money 단위테스트 작성 (입력이 10만 단위가 아니면 예외를 발생시킨다)

* 🟢green: 입력이 10만 단위가 아니면 예외를 발생시키는 로직 구현

* refactor: 메서드 및 상수 분리

* chore: Money equals, hashCode 재정의

* feat: 배팅 금액 입력 구현

* feat: Player의 멤버 변수에 bettingAmount 추가

* fix: 생성자 변경으로 인한 테스트 코드의 컴파일 에러 제거

* refactor: 승패 결과를 판단하는 책임을 Dealer로 이동

* refactor: Money 정적 팩터리 메서드 작성

* refactor: 메서드명 변경

* refactor: 테스트 메서드명 변경

* 🔴red: Hand 단위테스트 작성 (플레이어가 소유한 카드에 따라서 블랙잭 여부를 판단한다)

* 🟢green: 플레이어가 소유한 카드에 따라서 블랙잭 여부를 판단하는 로직 구현

* 🔴red: Player 단위테스트 작성 (플레이어가 가진 카드의 블랙잭 여부를 판단한다.)

* 🟢green: 플레이어가 가진 카드의 블랙잭 여부를 판단하는 로직 구현

* 🔴red: GameResult 단위테스트 작성 (승패에 따라 수익을 계산한다)

* 🟢green: 승패에 따라 수익을 계산하는 로직 구현

* feat: 승패 결정 기준 변경

* 🔴red: Player 단위테스트 작성 (플레이어의 승패에 따라 수익을 계산한다)

* 🟢green: 플레이어의 승패에 따라 수익을 계산하는 로직 구현

* 🔴red: Money 단위테스트 작성 (돈을 더할 수 있다)

* 🟢green: 돈을 더하는 로직 구현

* 🔴red: Dealer 단위테스트 작성 (플레이어들의 수익을 조회한다)

* 🟢green: 플레이어들의 수익을 조회하는 로직 구현

* 🔴red: BlackJackGame 단위테스트 작성 (플레이어들의 수익을 조회한다)

* 🟢green: 플레이어들의 수익을 조회하는 로직 구현

* feat: View 및 Controller 변경

* test: Deck 단위테스트 수정

* test: Hand 단위테스트 수정

* test: Dealer 단위테스트 수정

* test: Money 단위테스트 추가

* refactor: 테스트 클래스 패키지 수정

* refactor: 히트 여부를 입력받는 메서드명 변경

* refactor: Controller 메서드 분리

* docs: 요구사항 문서 수정

* refactor: 딜러가 카드를 더 뽑는 로직 변경

* refactor: 수익률 변수명을 winningRate에서 returnRate로 변경

* refactor: 메서드 체인 호출에 개행 추가

* refactor: 상수의 접근제어자를 private으로 변경

* refactor: Money 클래스의 ZERO 상수 추가 및 재사용 로직 구현

* feat: 카드를 받을 수 없는 상태일 때 카드를 추가할 경우 예외 발생 구현

* refactor: Money의 of 정적 팩토리 메서드 파라미터 변경 및 createBettingMon